Added github button

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -713,6 +713,8 @@
         <a href="https://bolha.us/@ecosdesosaria" class="text-decoration-none mx-3" target="_blank" rel="noopener" title="Mastodon">
             <i class="bi bi-mastodon fs-4"></i>
         </a>
+        
+        <a href="https://github.com/ecosdesosaria" class="text-decoration-none mx-3" target="_blank" rel="me" title="Github"><i class="bi bi-github fs-4"></i></a>
     </div>
 </div>
     </footer>
