--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -52,6 +52,9 @@
     </script>
     
     <link rel="me" href="https://bolha.us/@ecosdesosaria">
+    <link rel="webmention" href="https://webmention.io/ecosdesosaria.com/webmention">
+    <link rel="pingback" href="https://webmention.io/ecosdesosaria.com/xmlrpc">
+
     
     <style>
         :root {
