--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -52,8 +52,8 @@
     </script>
     
     <link rel="me" href="https://bolha.us/@ecosdesosaria">
-    <link rel="webmention" href="https://webmention.io/ecosdesosaria.com/webmention">
-    <link rel="pingback" href="https://webmention.io/ecosdesosaria.com/xmlrpc">
+    <link rel="webmention" href="https://webmention.io/www.ecosdesosaria.com/webmention">
+    <link rel="pingback" href="https://webmention.io/www.ecosdesosaria.com/xmlrpc">
 
     
     <style>
