--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -54,6 +54,8 @@
     <link rel="me" href="https://bolha.us/@ecosdesosaria">
     <link rel="webmention" href="https://webmention.io/www.ecosdesosaria.com/webmention">
     <link rel="pingback" href="https://webmention.io/www.ecosdesosaria.com/xmlrpc">
+    
+    <meta name="fediverse:creator" content="@ecosdesosaria@bolha.us">
 
     
     <style>
