adicionar menubar blog

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -618,9 +618,9 @@
                 <div class="col-md-4">
                     <div class="logo-container">
                         <div class="logo-placeholder">
-                            <img src="/logo_ecosdesosaria.png" alt="Ecos de Sosaria">
+                            <a href="/#inicio"><img src="/logo_ecosdesosaria.png" alt="Ecos de Sosaria"></a>
                         </div>
-                        <h1 class="uo-logo">Ecos de Sosaria</h1>
+                        <a href="/#inicio"><h1 class="uo-logo">Ecos de Sosaria</h1></a>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -633,7 +633,7 @@
                             
                                 <ul class="navbar-nav uo-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/#inicio">Início</a>
+                                        <a class="nav-link" href="/blog">Notícias</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="/#sobre">Sobre</a>
