adicionado comentario ao arquivo post.njk relacionado ao método para comentar.

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -18,7 +18,8 @@ layout: base.njk
     
     <div class="uo-section mt-5">
       <h3>Comentários</h3>
-
+      <small>Para comentar é necessário responder a postagem no <a href="https://bolha.us/@ecosdesosaria" target="_blank">Mastodon</a></small>.
+      <br><br>
       <div id="comments">Carregando comentários...</div>
     </div>
 
