fixed img for mobile view

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -81,6 +81,11 @@
           color: var(--cedar-staff);
           text-decoration: underline;
         }
+
+        .post-content img {
+            max-width: 100%;
+            height: auto;
+            }
         
         .post-preview {
           max-height: 6.5em; /* ~4 lines */
