Atualizado links de Stoat para XMPP

--- a/src/index.njk
+++ b/src/index.njk
@@ -15,7 +15,7 @@ title: Ecos de Sosaria - Servidor Ultima Online Roleplay
                 <p class="lead fs-4">Um servidor de Ultima Online focado em roleplay, onde suas ações moldam o mundo.</p>
                 <div class="mt-4">
                 <a href="#download" class="btn uo-btn mt-2">Jogar Agora</a>
-                <a href="https://stt.gg/D4QVyFgc" class="btn uo-btn mt-2" target="_blank">Stoat</a>
+                <a href="xmpp:ecosdesosaria@conference.isacloud.cc?join" class="btn uo-btn mt-2" target="_blank">XMPP</a>
                 <br>
                 </div>
             </div>
@@ -454,8 +454,8 @@ title: Ecos de Sosaria - Servidor Ultima Online Roleplay
             </div>
             
             <div class="text-center mt-4">
-                <p>Precisa de ajuda? Entre em contato conosco no Stoat!</p>
-                <a href="https://stt.gg/D4QVyFgc" class="btn uo-btn" target="_blank">Stoat do Servidor</a>
+                <p>Precisa de ajuda? Entre em contato conosco no XMPP!</p>
+                <a href="xmpp:ecosdesosaria@conference.isacloud.cc?join" class="btn uo-btn" target="_blank">XMPP do Servidor</a>
             </div>
         </div>
     </section>
