changed XMPP link

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -704,7 +704,7 @@
                     <h5>Recursos</h5>
                     <ul class="list-unstyled">
                         <li><a href="https://wiki.ecosdesosaria.com" class="text-reset" target="_blank">Wiki</a></li>
-                        <li><a href="xmpp:ecosdesosaria@conference.isacloud.cc?join" class="text-reset" target="_blank">XMPP</a></li>
+                        <li><a href="https://wiki.ecosdesosaria.com/wiki/XMPP" class="text-reset" target="_blank">XMPP</a></li>
                         <li><a href="https://bolha.us/@ecosdesosaria" class="text-reset" target="_blank">Mastodon</a></li>
                     </ul>
                 </div>
@@ -718,7 +718,7 @@
         </div>
         <div class="col-md-12 text-center mb-3">
     <div class="social-icons">
-        <a href="xmpp:ecosdesosaria@conference.isacloud.cc?join" class="text-decoration-none mx-3" target="_blank" rel="noopener" title="XMPP">
+        <a href="https://wiki.ecosdesosaria.com/wiki/XMPP" class="text-decoration-none mx-3" target="_blank" rel="noopener" title="XMPP">
             <i class="bi bi-chat-dots fs-4"></i>
         </a>
         <a href="https://bolha.us/@ecosdesosaria" class="text-decoration-none mx-3" target="_blank" rel="noopener" title="Mastodon">
